xây dựng kênh payment

--- a/Ecomm/Shop/templates/app/addtocart.html
+++ b/Ecomm/Shop/templates/app/addtocart.html
@@ -24,7 +24,7 @@
                                 <a pid="{{item.product.id}}" class="minus-cart btn"><i
                                         class="fas fa-minus-square fa-lg"></i></a>
                                 <span id="quantity">{{item.quantity}}</span>
-                                <a pid="{{item.product.id}}" class="plus-cart btn"><i class="fas fa-flus-square fa-lg"></i></a>
+                                <a pid="{{item.product.id}}" class="plus-cart btn"><i class="fa fa-plus-square fa-lg"></i></a>
                             </div>
                             <div class="d-flex justify-content-between">
                                 <a href="#" pid="{{item.product.id}}" class="remove-cart btn btn-sm btn-secondary mr-3">Remove
