--- a/Ecomm/Shop/templates/app/base.html
+++ b/Ecomm/Shop/templates/app/base.html
@@ -61,7 +61,6 @@
             <li class="nav-item dropdown mx-2">
                 <a class="nav-link dropdown-toggle text-white" href="#" id="profileDropdown" role="button"
                    data-bs-toggle="dropdown" aria-expanded="false">
-                    Ân
                     {{request.user.username|capfirst}}
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="profileDropdown">
@@ -91,6 +90,7 @@
 {% block banner-slider %}{% endblock banner-slider %}
 {% block information %}{% endblock information %}
 {% block main-content %}{% endblock main-content %}
+{% block payment-gateway %} {% endblock payment-gateway %}
 <footer class="container-fluid fixed-bottom bg-success text-center p-2 mt-5">
     Coppy right
 </footer>
