--- a/Ecomm/Shop/templates/app/checkout.html
+++ b/Ecomm/Shop/templates/app/checkout.html
@@ -53,9 +53,9 @@
                         <input type="number" name="totalamount" value="{{totalamount}}" readonly class="form-control">
                     </div>
               <div class="text-end">
-                          <!--            <button class="btn btn-warning mt-3 px-5 fw-bold">Continue</button>-->
+<!--                                      <button class="btn btn-warning mt-3 px-5 fw-bold">Payment</button>-->
                           <!--            <div id="paypal-button-container">-->
-                      <button id="rzp-button1" type="submit" class="btn btn-warning mt-3 px-5 fw-bold">Payment
+                      <button id="str-button1" type="submit" class="btn btn-warning mt-3 px-5 fw-bold">Payment
                       </button>
                           <!--            </div>-->
                     </div>
@@ -67,34 +67,132 @@
 
 {% block payment-gateway %}
 <script>
-    var options = {
-        "key": "rzp_test_2TUHCJnGDCobwu" , //Enter the Key ID generated from the Dashboard
-        "amount": "{{razoramount}}" , // Amount is in currency submits. Default currency is INR. Hence, 50000 refers to 50000 paise
-        "currency": "INR" ,
-        "name": "Products" ,
-        "description": "Purchase Product" ,
-        "order_id": "{{order_id}}" , //This is a sample Order ID. Pass the 'id' obtained in the response of Step 1
-        "handler": function (response) {
-            console.log("success")
-                var form = document.getElementById("myform");
-                //alert(form.elements["custid"].value);
-                //alert(response.razorpay_payment_id);
-                //alert(response.razorpay_order_id);
-                //alert(response.razorpay_signature)
-            window.location.href = `http://localhost:8000/paymentdone?order=id=${response.razorpay_order_id}&payment_id=${response.razorpay_payment_id}&cust_id=${form.elements["custid"].value}`
-        },
-        "theme": {
-            "color": "#3399cc"
-        }
-    };
-    var rzp1 = new Razorpay(options);
-    rzp1.om('payment.failed', function (response){
-        alert(response.error.description);
-    });
-    document.getElementById('rzp-button1').onclick = function (e){
-        console.log("button click");
-        rzp1.open();
-        e.preventDefault();
-    }
+    // This is your test publishable API key.
+const stripe = Stripe("pk_test_51MYPUxGh9Ruj27FTfeJciWUGCxEExrBueY3nlA4p5b7R2QHSJJGIfHP0vRCaQzrt3xxT8umKZH8kWYdVAhdhFDM300gny8X6rl");
+
+// The items the customer wants to buy
+const items = [{ id: "xl-tshirt" }];
+
+let elements;
+
+initialize();
+checkStatus();
+
+document
+  .querySelector("#payment-form")
+  .addEventListener("submit", handleSubmit);
+
+let emailAddress = '';
+// Fetches a payment intent and captures the client secret
+async function initialize() {
+  const response = await fetch("/create-payment-intent", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ items }),
+  });
+  const { clientSecret } = await response.json();
+
+  const appearance = {
+    theme: 'stripe',
+  };
+  elements = stripe.elements({ appearance, clientSecret });
+
+  const linkAuthenticationElement = elements.create("linkAuthentication");
+  linkAuthenticationElement.mount("#link-authentication-element");
+
+  linkAuthenticationElement.on('change', (event) => {
+    emailAddress = event.value.email;
+  });
+
+  const paymentElementOptions = {
+    layout: "tabs",
+  };
+
+  const paymentElement = elements.create("payment", paymentElementOptions);
+  paymentElement.mount("#payment-element");
+}
+
+async function handleSubmit(e) {
+  e.preventDefault();
+  setLoading(true);
+
+  const { error } = await stripe.confirmPayment({
+    elements,
+    confirmParams: {
+      // Make sure to change this to your payment completion page
+      return_url: "http://localhost:4242/checkout.html",
+      receipt_email: emailAddress,
+    },
+  });
+
+  // This point will only be reached if there is an immediate error when
+  // confirming the payment. Otherwise, your customer will be redirected to
+  // your `return_url`. For some payment methods like iDEAL, your customer will
+  // be redirected to an intermediate site first to authorize the payment, then
+  // redirected to the `return_url`.
+  if (error.type === "card_error" || error.type === "validation_error") {
+    showMessage(error.message);
+  } else {
+    showMessage("An unexpected error occurred.");
+  }
+
+  setLoading(false);
+}
+
+// Fetches the payment intent status after payment submission
+async function checkStatus() {
+  const clientSecret = new URLSearchParams(window.location.search).get(
+    "payment_intent_client_secret"
+  );
+
+  if (!clientSecret) {
+    return;
+  }
+
+  const { paymentIntent } = await stripe.retrievePaymentIntent(clientSecret);
+
+  switch (paymentIntent.status) {
+    case "succeeded":
+      showMessage("Payment succeeded!");
+      break;
+    case "processing":
+      showMessage("Your payment is processing.");
+      break;
+    case "requires_payment_method":
+      showMessage("Your payment was not successful, please try again.");
+      break;
+    default:
+      showMessage("Something went wrong.");
+      break;
+  }
+}
+
+// ------- UI helpers -------
+
+function showMessage(messageText) {
+  const messageContainer = document.querySelector("#payment-message");
+
+  messageContainer.classList.remove("hidden");
+  messageContainer.textContent = messageText;
+
+  setTimeout(function () {
+    messageContainer.classList.add("hidden");
+    messageText.textContent = "";
+  }, 4000);
+}
+
+// Show a spinner on payment submission
+function setLoading(isLoading) {
+  if (isLoading) {
+    // Disable the button and show a spinner
+    document.querySelector("#submit").disabled = true;
+    document.querySelector("#spinner").classList.remove("hidden");
+    document.querySelector("#button-text").classList.add("hidden");
+  } else {
+    document.querySelector("#submit").disabled = false;
+    document.querySelector("#spinner").classList.add("hidden");
+    document.querySelector("#button-text").classList.remove("hidden");
+  }
+}
 </script>
 {% endblock payment-gateway %}
