--- a/Ecomm/Shop/templates/app/base.html
+++ b/Ecomm/Shop/templates/app/base.html
@@ -71,7 +71,7 @@
                 </ul>
             </li>
             <li class="nav-item mx-2">
-                <a href="#" class="nav-link text-white">Cart 4</a>
+                <a href="{% url 'showcart' %}" class="nav-link text-white">Your Cart</a>
             </li>
             <li class="nav-item mx-2">
                 <a href="#" class="nav-link text-white">Whistlist 4</a>
