--- a/Ecomm/Shop/templates/app/checkout.html
+++ b/Ecomm/Shop/templates/app/checkout.html
@@ -49,7 +49,7 @@
                     </div>
               {% endfor %}
               <div class="form-check mb-3">
-                        <label for="totalamount" class="form-label">Total Amount</label>
+                        <label for="totamount" class="form-label">Total Amount</label>
                         <input type="number" name="totalamount" value="{{totalamount}}" readonly class="form-control">
                     </div>
               <div class="text-end">
@@ -63,136 +63,36 @@
         </div>
     </div>
 </div>
+<!--&lt;!&ndash; Display a payment form &ndash;&gt;-->
+<!--    <form id="payment-form">-->
+<!--      <div id="link-authentication-element">-->
+<!--        &lt;!&ndash;Stripe.js injects the Link Authentication Element&ndash;&gt;-->
+<!--      </div>-->
+<!--      <div id="payment-element">-->
+<!--        &lt;!&ndash;Stripe.js injects the Payment Element&ndash;&gt;-->
+<!--      </div>-->
+<!--      <button id="submit">-->
+<!--        <div class="spinner hidden" id="spinner"></div>-->
+<!--        <span id="button-text">Pay now</span>-->
+<!--      </button>-->
+<!--      <div id="payment-message" class="hidden"></div>-->
+<!--    </form>-->
 {% endblock main-content %}
 
 {% block payment-gateway %}
 <script>
-    // This is your test publishable API key.
-const stripe = Stripe("pk_test_51MYPUxGh9Ruj27FTfeJciWUGCxEExrBueY3nlA4p5b7R2QHSJJGIfHP0vRCaQzrt3xxT8umKZH8kWYdVAhdhFDM300gny8X6rl");
-
-// The items the customer wants to buy
-const items = [{ id: "xl-tshirt" }];
-
-let elements;
-
-initialize();
-checkStatus();
-
-document
-  .querySelector("#payment-form")
-  .addEventListener("submit", handleSubmit);
-
-let emailAddress = '';
-// Fetches a payment intent and captures the client secret
-async function initialize() {
-  const response = await fetch("/create-payment-intent", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ items }),
-  });
-  const { clientSecret } = await response.json();
-
-  const appearance = {
-    theme: 'stripe',
-  };
-  elements = stripe.elements({ appearance, clientSecret });
-
-  const linkAuthenticationElement = elements.create("linkAuthentication");
-  linkAuthenticationElement.mount("#link-authentication-element");
-
-  linkAuthenticationElement.on('change', (event) => {
-    emailAddress = event.value.email;
-  });
-
-  const paymentElementOptions = {
-    layout: "tabs",
-  };
-
-  const paymentElement = elements.create("payment", paymentElementOptions);
-  paymentElement.mount("#payment-element");
-}
-
-async function handleSubmit(e) {
-  e.preventDefault();
-  setLoading(true);
-
-  const { error } = await stripe.confirmPayment({
-    elements,
-    confirmParams: {
-      // Make sure to change this to your payment completion page
-      return_url: "http://localhost:4242/checkout.html",
-      receipt_email: emailAddress,
-    },
-  });
-
-  // This point will only be reached if there is an immediate error when
-  // confirming the payment. Otherwise, your customer will be redirected to
-  // your `return_url`. For some payment methods like iDEAL, your customer will
-  // be redirected to an intermediate site first to authorize the payment, then
-  // redirected to the `return_url`.
-  if (error.type === "card_error" || error.type === "validation_error") {
-    showMessage(error.message);
-  } else {
-    showMessage("An unexpected error occurred.");
-  }
-
-  setLoading(false);
-}
-
-// Fetches the payment intent status after payment submission
-async function checkStatus() {
-  const clientSecret = new URLSearchParams(window.location.search).get(
-    "payment_intent_client_secret"
-  );
-
-  if (!clientSecret) {
-    return;
-  }
-
-  const { paymentIntent } = await stripe.retrievePaymentIntent(clientSecret);
-
-  switch (paymentIntent.status) {
-    case "succeeded":
-      showMessage("Payment succeeded!");
-      break;
-    case "processing":
-      showMessage("Your payment is processing.");
-      break;
-    case "requires_payment_method":
-      showMessage("Your payment was not successful, please try again.");
-      break;
-    default:
-      showMessage("Something went wrong.");
-      break;
-  }
-}
-
-// ------- UI helpers -------
-
-function showMessage(messageText) {
-  const messageContainer = document.querySelector("#payment-message");
-
-  messageContainer.classList.remove("hidden");
-  messageContainer.textContent = messageText;
-
-  setTimeout(function () {
-    messageContainer.classList.add("hidden");
-    messageText.textContent = "";
-  }, 4000);
-}
-
-// Show a spinner on payment submission
-function setLoading(isLoading) {
-  if (isLoading) {
-    // Disable the button and show a spinner
-    document.querySelector("#submit").disabled = true;
-    document.querySelector("#spinner").classList.remove("hidden");
-    document.querySelector("#button-text").classList.add("hidden");
-  } else {
-    document.querySelector("#submit").disabled = false;
-    document.querySelector("#spinner").classList.add("hidden");
-    document.querySelector("#button-text").classList.remove("hidden");
-  }
-}
+    var options = {
+        "key":"pk_test_51MYPsNHsW0Aawd6TkQeIZ0yDCYqA9Z6y2UNdk7wkRQYy7zgNkAfGoh6bxKaI9ZTGLe7xPmkJHYbhUSJsP3qyx2xV00pgmdKXAK",
+        "amount":"{{pkamount}}",
+        "currency":"Dolas",
+        "name":"Product",
+        "description":"Purchase Product",
+        "order_id":"{{order_id}}",
+        "handler": function (response):{
+            console.log("success");
+                var form = document.getElemtById("myform");
+                window.location.href = http://127.0.0.1:8000/paymentdone?order_id=${response
+        }
+    }
 </script>
 {% endblock payment-gateway %}
