--- a/Ecomm/Shop/templates/app/base.html
+++ b/Ecomm/Shop/templates/app/base.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{% static 'app/css/owl.carousel.min.css' %}"/>
     <link rel="stylesheet" href="{% static 'app/css/all.min.css' %}"/>
     <link rel="stylesheet" href="{% static 'app/css/style.css' %}"/>
-    <script src="https://js.stripe.com/v3/checkout.js"></script>
+<!--    <script src="https://js.stripe.com/v3/checkout.js"></script>-->
 <!--    <link rel="stylesheet" href="checkout.css" />-->
     <title>Daily Product | {% block title %} {% endblock title %}</title>
 </head>
@@ -107,4 +107,4 @@
 <script src="{% static 'app/js/owl.carousel.min.js' %}"></script>
 <script src="{% static 'app/js/all.min.js' %}"></script>
 <script src="{% static 'app/js/myscript.js' %}"></script>
-<script src="{% static 'app/js/checkout.js' %}"></script>
+<!--<script src="{% static 'app/js/checkout.js' %}"></script>-->
