--- a/Ecomm/Shop/templates/app/landing.html
+++ b/Ecomm/Shop/templates/app/landing.html
@@ -18,6 +18,7 @@
         <button type="submit" id="checkout-button">Checkout</button>
       </form>
     </section>
+  {% csrf_token %}
   </body>
   <script type = "text/javascript">
     var stripe = Stripe("{{STRIPE_PUBLIC_KEY}}")
@@ -31,12 +32,12 @@
         return response.json();
       })
       .then(function (session) {
-        return stripe.redirectToCheckout({ sessionId: session.id });
+        return stripe.RedirectToCheckout({ sessionId: session.id });
       })
       .then(function (result) {
         if (result.error) {
           alert(result.error){
-            alert(result.error.message);
+            alert(result.error.message)
           }
         }})
         .catch(function (error){
